--- a/package.json
+++ b/package.json
@@ -11,18 +11,27 @@
   "dependencies": {
     "@expo-google-fonts/poppins": "^0.2.2",
     "@expo/webpack-config": "^0.17.4",
-    "expo": "~47.0.12",
+    "@hookform/resolvers": "^2.9.10",
+    "@react-navigation/bottom-tabs": "^6.5.4",
+    "@react-navigation/native": "^6.1.3",
+    "expo": "^47.0.13",
     "expo-app-loading": "~2.1.1",
     "expo-font": "~11.0.1",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
+    "install": "^0.13.0",
     "react": "18.1.0",
     "react-dom": "^18.1.0",
+    "react-hook-form": "^7.43.0",
     "react-native": "0.70.5",
+    "react-native-gesture-handler": "~2.8.0",
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-responsive-fontsize": "^0.5.1",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
     "react-native-web": "^0.18.10",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
