--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
     "@expo-google-fonts/poppins": "^0.2.2",
     "@expo/webpack-config": "^0.17.4",
     "@hookform/resolvers": "^2.9.10",
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-navigation/bottom-tabs": "^6.5.4",
     "@react-navigation/native": "^6.1.3",
+    "date-fns": "^2.29.3",
     "expo": "^47.0.13",
     "expo-app-loading": "~2.1.1",
     "expo-font": "~11.0.1",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "install": "^0.13.0",
+    "intl": "^1.2.5",
     "react": "18.1.0",
     "react-dom": "^18.1.0",
     "react-hook-form": "^7.43.0",
@@ -29,8 +32,11 @@
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
+    "react-native-svg": "13.4.0",
+    "react-native-uuid": "^2.0.1",
     "react-native-web": "^0.18.10",
     "styled-components": "^5.3.6",
+    "victory-native": "^36.6.8",
     "yup": "^0.32.11"
   },
   "devDependencies": {
