--- a/package.json
+++ b/package.json
@@ -15,10 +15,15 @@
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-navigation/bottom-tabs": "^6.5.4",
     "@react-navigation/native": "^6.1.3",
+    "@react-navigation/stack": "^6.3.12",
+    "babel-plugin-inline-dotenv": "^1.7.0",
     "date-fns": "^2.29.3",
     "expo": "^47.0.13",
     "expo-app-loading": "~2.1.1",
+    "expo-apple-authentication": "~5.0.1",
+    "expo-auth-session": "~3.8.0",
     "expo-font": "~11.0.1",
+    "expo-random": "~13.0.0",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "install": "^0.13.0",
@@ -44,6 +49,7 @@
     "@types/react": "~18.0.24",
     "@types/react-native": "~0.70.6",
     "@types/styled-components-react-native": "^5.2.1",
+    "react-native-svg-transformer": "^1.0.0",
     "typescript": "^4.6.3"
   },
   "private": true
